<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_expense"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_category"
            android:inputType="text"
            android:maxLength="32"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:inputType="numberSigned|number"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showDatePickerDialog"
                android:text="@string/button_date" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/text_default_date"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addRecord"
                android:text="@string/button_submit"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="viewRecord"
                android:text="@string/button_view_record"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>