<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/label_all_record" />

    <TextView
        android:id="@+id/text_radioGroup"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:backgroundTint="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/text_radioGroup"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_light_transparent"
        android:backgroundTint="@android:color/darker_gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RadioButton
            android:id="@+id/radio_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/radio_date" />

        <RadioButton
            android:id="@+id/radio_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/radio_category"
            android:textAllCaps="false" />

        <RadioButton
            android:id="@+id/radio_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/radio_amount"
            android:textAllCaps="false" />
    </RadioGroup>

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>